--- a/Jenkins.html
+++ b/Jenkins.html
@@ -5,7 +5,7 @@ title: Jenkins CCJPE Course Outline
 <div id="posts">
   <p>In this course, we’re going to focus on preparing for the <b>CCJPE</b>, that way you’ll become an expert with both the open source and enterprise Jenkins platforms.<p>
 <center>
-  <img sr="/images/jenkinscourse.png" height="50%" width="50%" /></center><br/>
+  <img src="/images/jenkinscourse.png" height="50%" width="50%" /></center><br/>
   <p>If somehow you haven’t used Jenkins yet, we HIGHLY recommend watching some of our videos to see why we love it so much.  It’s an extremely flexible open source automation server, and works great for development teams, operations, and more.  If one of your goals is continuous integration or continuous delivery, Jenkins is one of, if not the best tool for the job.
 </p>
 
